# pluginop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml  rust.yml
common/: Cargo.toml  README.md
common/src/: lib.rs  quic.rs
dev/bench/: data.js
lib/: Cargo.toml
lib/benches/: benchmarks.rs
lib/src/: api.rs  handler.rs  lib.rs  plugin.rs  rawptr.rs
macro/: Cargo.toml  README.md
macro/src/: lib.rs
mock/: Cargo.toml
mock/benches/: benchmarks.rs
mock/src/: lib.rs
octets/: Cargo.toml
octets/src/: lib.rs
rawptr/: Cargo.toml
rawptr/src/: lib.rs
tests/: generate_wasms.sh
tests/enable/: Cargo.toml  enable.wasm
tests/enable/src/: lib.rs
tests/increase-max-data/: Cargo.toml  increase_max_data.wasm
tests/increase-max-data/src/: lib.rs
tests/input-outputs/: Cargo.toml  input_outputs.wasm
tests/input-outputs/src/: lib.rs
tests/inputs-support/: Cargo.toml  inputs_support.wasm
tests/inputs-support/src/: lib.rs
tests/macro-simple/: Cargo.toml  macro_simple.wasm
tests/macro-simple/src/: lib.rs
tests/max-data-frame/: Cargo.toml  max_data_frame.wasm
tests/max-data-frame/src/: lib.rs
tests/memory-allocation/: Cargo.toml  memory_allocation.wasm
tests/memory-allocation/src/: lib.rs
tests/poctl/: Cargo.toml  poctl.wasm
tests/poctl/src/: lib.rs
tests/simple-wasm/: Cargo.toml  simple_wasm.wasm
tests/simple-wasm/src/: lib.rs
tests/static-memory/: Cargo.toml  static_memory.wasm
tests/static-memory/src/: lib.rs
tests/super-frame/: Cargo.toml  super_frame.wasm
tests/super-frame/src/: lib.rs
tests/timer-usage/: Cargo.toml  timer_usage.wasm
tests/timer-usage/src/: lib.rs
wasm/: Cargo.toml  README.md
wasm/src/: fd.rs  lib.rs
