[package]
name = "pluginop"
version = "0.1.0"
authors = ["Quentin De Coninck <quentin.deconinck@uclouvain.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
# Let use the single pass compiler, which is much faster than others
wasmer = "4"
wasmer-compiler-singlepass = "4"
pluginop-common = { path = "../common" }
pluginop-macro = { path = "../macro" }
postcard = { version = "1", features = [] }
fnv = "1"
getrandom = "0.2"
unix-time = "0.1"
pluginop-octets = { path = "../octets" }
pluginop-rawptr = { path = "../rawptr" }
bytes = "1"

[dev-dependencies]
env_logger = "0.10.0"