[package]
name = "pluginop-macro"
version = "0.1.0"
authors = ["Quentin De Coninck <quentin.deconinck@umons.ac.be>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for the pluginop library"
homepage = "https://core-quic.github.io/"
repository = "https://github.com/core-quic/pluginop"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.14"