[package]
name = "pluginop-wasm"
version = "0.1.0"
authors = ["Quentin De Coninck <quentin.deconinck@uclouvain.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluginop-common = { path = "../common" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
unix-time = "0.1"